# rssbuilder

./: .gitignore  .pre-commit-config.yaml  Pipfile  pyproject.toml  rssbuild.sublime-project  sample-config.yaml
rssbuild/: __init__.py  __main__.py  bulder.py  consts.py  fetcher.py  fixers.py  models.py  parser.py  query.py
rssbuilder/: __init__.py  __main__.py  bulder.py  cache.py  cli.py  consts.py  fetcher.py  fixers.py  models.py  parser.py
tests/: test.py
tests/samples/: tvcs.html  vivecastellon.html
